crates/ty_python_semantic/resources/mdtest/snapshots/ty_extensions.md_-_`ty_extensions`_-_Diagnostic_snapshots_(662547cd88c67f9f).snap.new
---
source: crates/ty_test/src/lib.rs
assertion_line: 397
expression: snapshot
---
---
mdtest name: ty_extensions.md - `ty_extensions` - Diagnostic snapshots
mdtest path: crates/ty_python_semantic/resources/mdtest/ty_extensions.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from ty_extensions import static_assert
 2 | import secrets
 3 | 
 4 | # a passing assert
 5 | static_assert(1 < 2)
 6 | 
 7 | # evaluates to False
 8 | # error: [static-assert-error]
 9 | static_assert(1 > 2)
10 | 
11 | # evaluates to False, with a message as the second argument
12 | # error: [static-assert-error]
13 | static_assert(1 > 2, "with a message")
14 | 
15 | # evaluates to something falsey
16 | # error: [static-assert-error]
17 | static_assert("")
18 | 
19 | # evaluates to something ambiguous
20 | # error: [static-assert-error]
21 | static_assert(secrets.randbelow(2))
```

# Diagnostics

```
error[static-assert-error]: Static assertion error: argument evaluates to `False`
  --> src/mdtest_snippet.py:9:1
   |
 7 | # evaluates to False
 8 | # error: [static-assert-error]
 9 | static_assert(1 > 2)
   | ^^^^^^^^^^^^^^-----^
   |               |
   |               Inferred type of argument is `Literal[False]`
10 |
11 | # evaluates to False, with a message as the second argument
   |
info: rule `static-assert-error` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `static_assert` is incorrect
  --> src/mdtest_snippet.py:13:22
   |
11 | # evaluates to False, with a message as the second argument
12 | # error: [static-assert-error]
13 | static_assert(1 > 2, "with a message")
   |                      ^^^^^^^^^^^^^^^^ Expected `Unknown | None`, found `Literal["with a message"]`
14 |
15 | # evaluates to something falsey
   |
info: Function defined here
 --> stdlib/ty_extensions.pyi:5:5
  |
4 | # Special operations
5 | def static_assert(condition: object, msg: LiteralString | None = None) -> None: ...
  |     ^^^^^^^^^^^^^                    -------------------------------- Parameter declared here
6 |
7 | # Types
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[static-assert-error]: Static assertion error: argument of type `Literal[""]` is statically known to be falsy
  --> src/mdtest_snippet.py:17:1
   |
15 | # evaluates to something falsey
16 | # error: [static-assert-error]
17 | static_assert("")
   | ^^^^^^^^^^^^^^--^
   |               |
   |               Inferred type of argument is `Literal[""]`
18 |
19 | # evaluates to something ambiguous
   |
info: rule `static-assert-error` is enabled by default

```

```
error[static-assert-error]: Static assertion error: argument of type `int` has an ambiguous static truthiness
  --> src/mdtest_snippet.py:21:1
   |
19 | # evaluates to something ambiguous
20 | # error: [static-assert-error]
21 | static_assert(secrets.randbelow(2))
   | ^^^^^^^^^^^^^^--------------------^
   |               |
   |               Inferred type of argument is `int`
   |
info: rule `static-assert-error` is enabled by default

```
